src/test/deca/syntax/valid/cast_int.deca
// Description :
// Test syntaxique valide : cast explicite bien parenthésé.
//
// Resultats :
// ok

{
    int a;
    a = (int)(3.7);
}