src/test/deca/syntax/invalid/custom/incomplete_if.deca
// Resultats :
// Erreur contextuelle
// Ligne 3 : instruction if incomplète

if (true) {
    int a = 5;
